--- a/emacs.d/myinit.org
+++ b/emacs.d/myinit.org
@@ -16,3 +16,54 @@
 (global-display-line-numbers-mode)
 ;;(setq display-line-numbers-type 'relative)
 #+END_SRC
+
+#+RESULTS:
+
+** Themes and other Aesthetic stuffs 
+#+BEGIN_SRC emacs-lisp
+(use-package dracula-theme
+   :config
+   (load-theme 'dracula)
+   :ensure t)
+   
+
+(global-hl-line-mode t) ;; This highlights the current line in the buffer
+
+(use-package beacon ;; This applies a beacon effect to the highlighted line
+   :ensure t
+   :config
+   (beacon-mode 1))
+#+END_SRC
+* Packages
+** Autocomplete
+#+BEGIN_SRC emacs-lisp
+(use-package auto-complete
+  :ensure t
+  :config 
+  (ac-config-default)
+)
+#+END_SRC
+** Helm
+#+BEGIN_SRC emacs-lisp
+(use-package helm
+  :init
+    (require 'helm-config)
+    (setq helm-split-window-in-side-p t
+          helm-move-to-line-cycle-in-source t)
+  :config 
+    (helm-mode 1) ;; Most of Emacs prompts become helm-enabled
+    (helm-autoresize-mode 1) ;; Helm resizes according to the number of candidates
+    (global-set-key (kbd "C-x b") 'helm-buffers-list) ;; List buffers ( Emacs way )
+    (global-set-key (kbd "C-x r b") 'helm-bookmarks) ;; Bookmarks menu
+    (global-set-key (kbd "C-x C-f") 'helm-find-files) ;; Finding files with Helm
+    (global-set-key (kbd "M-c") 'helm-calcul-expression) ;; Use Helm for calculations
+    (global-set-key (kbd "C-s") 'helm-occur)  ;; Replaces the default isearch keybinding
+    (global-set-key (kbd "C-h a") 'helm-apropos)  ;; Helmized apropos interface
+    (global-set-key (kbd "M-x") 'helm-M-x)  ;; Improved M-x menu
+    (global-set-key (kbd "M-y") 'helm-show-kill-ring)  ;; Show kill ring, pick something to paste
+  :ensure t)
+#+END_SRC
+
+
+
+* Latex 
