--- a/emacs.d/myinit.org
+++ b/emacs.d/myinit.org
@@ -15,6 +15,16 @@
 ;; Line numbering
 (global-display-line-numbers-mode)
 ;;(setq display-line-numbers-type 'relative)
+
+;;Start fullscreen
+(add-to-list 'default-frame-alist '(fullscreen . maximized))
+
+;;Cursor to I-beam
+(setq-default cursor-type 'bar) 
+
+;;New window to the left. Not bottem
+(setq split-height-threshold nil)
+(setq split-width-threshold 0)
 #+END_SRC
 
 #+RESULTS:
@@ -48,7 +58,7 @@
 (use-package helm
   :init
     (require 'helm-config)
-    (setq helm-split-window-in-side-p t
+    (setq helm-split-window-inside-p t
           helm-move-to-line-cycle-in-source t)
   :config 
     (helm-mode 1) ;; Most of Emacs prompts become helm-enabled
@@ -64,6 +74,24 @@
   :ensure t)
 #+END_SRC
 
+#+RESULTS:
 
+** Try
+#+BEGIN_SRC emacs-lisp
+(use-package try
+  :ensure t)
+#+END_SRC
+** Which-key
+#+BEGIN_SRC emacs-lisp
+(use-package which-key
+  :config 
+    (setq which-key-idle-delay 0.5)
+    (setq which-key-popup-type 'frame)
+    (which-key-mode)
+    (which-key-setup-minibuffer)
+    (set-face-attribute 'which-key-local-map-description-face nil 
+       :weight 'bold)
+  :ensure t)
+#+END_SRC
 
-* Latex 
+#+RESULTS:
